# Stochastic-Gradient-Descent

./: ..gitignore.un~  .gitignore  .gitignore~  README.md  pyproject.toml  requirements.txt
notebooks/: 01-10-25-Repetitions.ipynb  13-10-25-Negative_Results.ipynb  20-10-25-Spike.ipynb  25-10-23-Plots_Spike.ipynb  25-10-24-General_Spikes.ipynb  25-10-30-Combination_Activations.ipynb  sampling_spiked_cumulant.ipynb  template.ipynb
scripts/: data_download.py  main.py  multi_walk.py  optimizers_test.py  run_spike.py  spikes_model.py
shell/: combinations.sh  jobloop.sh  jobscript.sh  parallel_launch.sh  submit.sh  tmp.sh
src/SGD/: data.py  dynamics.py  functions.py  gradient.py  module1.py  optimizers.py  plot_config.py  utils.py
test/: test_data.py  test_dynamics.py
